# docker-panel-lite

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOGS.md  GO_WORKER.md  MIGRATION_GUIDE.md  NEW_WORKER_GUIDE.md  NGROK-SESSIONS.md  README.md  SECURITY.md  VPS-PROFITABILITY.md  VPS_DOMAINS_TRAEFIK.md  WORKER_DOCKER_HUB.md  WORKER_IMG_IMPLEMENTATION.md  database.rules.json  docker-compose.build.yaml  docker-compose.yaml  run-local.sh  run.sh
apps/logs/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/web/: Dockerfile  package-lock.json  package.json
data-go/: worker-id  worker-token
docs/: GO_WORKER.md  MIGRATION_GUIDE.md  NEW_WORKER_GUIDE.md  README.md  SECURITY-DOCKER-HUB.md  SECURITY.md  WORKER_DESGIN.md  WORKER_DOCKER_HUB.md  WORKER_IMG_IMPLEMENTATION.md
docs/streamlit/: README.md
docs/worker-setup/: DOCKER_PANEL_LITE_WORKER_SETUP_GUIDE.html
scripts/: check-worker-parity.sh  check-worker-rust-parity.sh  database.rules.json  download-app-logs.http  firebase-auth.http  firebase.json  ngrok-sessions.sh  patch-repository-owners.http  publish-worker-image.sh
services/: WORKER_DESIGN.md  WORKER_DESIGN_GO.md  WORKER_DESIGN_PY.md  WORKER_DESIGN_RUST.md
services/logs-agent/: Dockerfile  README.md  requirements.txt
services/worker-go/: Dockerfile  go.mod  (+1 more)
services/worker-rust/: Cargo.toml  Dockerfile  build.rs
services/worker-rust/src/: environment.rs  firebase.rs  heartbeat.rs  identity.rs  main.rs  operations.rs  queue.rs
streamlit/: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yaml  requirements.txt
(+121 files in other folders)
