[package]
name = "worqer-worker-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
ctrlc = "3.4"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
urlencoding = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
